# 8x8org

./: .aliases  .bashrc_8x8org  .gitignore  .replit  .replit.new  .shellrc  .shellrc_8x8org  AutoSync_Test.md  AutoSync_Test_1768410190.md  AutoSync_Test_1768410242.md  Cron_AutoSync_Test.md  Daemon_Sync_Test.md  FINAL_SYNC_OK.md  PATCH_LOCAL_AI.sh  README.md  REplit_to_Termux_Test.md  SYNC_TEST.md  SYNC_TEST_1768409111.md  Sync_Fix_Test.md  TO-DO.json  Termux_AutoSync_Test.md  YOUWARE.md  _push_workspace.sh  backup-everything.sh  backup-server.js  backup-server.mjs  build_ultimate_dashboard.sh  env.sh  fix_flashtm8_ai.sh  fix_workspace_repo_and_push.sh  github-backup.sh  index.html  install_all_ai_tools.sh  ollama_client.js  package-lock.json  package.json  push-to-github.sh  push-to-termux.sh  pyproject.toml  replit.md  (+12 more)
apps/dashboard/: server.py
backend/: package-lock.json
backend/src/: index.ts
components/auth/: Login.tsx
components/dashboard/: AIConsole.tsx  BlockchainExplorer.tsx  BotManager.tsx  CryptoTools.tsx  DashboardLayout.tsx  FileExplorer.tsx  GitHubBackup.tsx  LogViewer.tsx  Settings.tsx  SystemMonitor.tsx  Terminal.tsx
docs/: HOW_TO_INSTALL.md
lib/: client.ts
patches/: fix003.sh  fix010_restructure.sh  fix020_cleanup_repo.sh  fix120_bootstrap_workspace_mirror.sh
repos/8x8org/: .gitignore  .replit  .replit_bashrc  .shellrc  (+25 more)
scripts/: backup_workspace.sh  bootstrap_workspace_mirror.sh  cleanup_home_safe.sh  env.sh  install_termux_cron_backup.sh  replit_backup_loop.sh  workspace_hygiene.sh
src/: App.tsx
store/: config.ts
tools/: dev
(+141 files in other folders)
