[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "eventlet>=0.40.4",
    "flask-socketio>=5.6.0",
    "psutil>=7.2.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
]
